no jira: outdated JVM setting is removed