@@ -779,7 +779,7 @@
 					<configuration>
 						<forkCount>1</forkCount>
 						<reuseForks>true</reuseForks>
-						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+						<argLine>-Xmx1024m</argLine>
 						<includes>
 							<include>**/Test*.java</include>
 						</includes>
